edited the code and logic

--- a/shop-vista/src/index.css
+++ b/shop-vista/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .homeActive{
+  border-bottom: 2px solid hsl(26, 100%, 55%);
+}
+.menActive{
+  border-bottom: 2px solid hsl(26, 100%, 55%);
+}
+.womenActive{
+  border-bottom: 2px solid hsl(26, 100%, 55%);
+}
+.aboutActive{
+  border-bottom: 2px solid hsl(26, 100%, 55%);
+}
+.contactActive{
+  border-bottom: 2px solid hsl(26, 100%, 55%);
+} */
